@@ -4182,12 +4182,6 @@ delete_handlers ()
     }
 }
 
-int
-max_parm_reg_num ()
-{
-  return max_parm_reg;
-}
-
 /* Return the first insn following those generated by `assign_parms'.  */
 
 rtx
